--- a/.github/workflows/first_workflow_2.yml
+++ b/.github/workflows/first_workflow_2.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: All steps together
+        uses: actions/checkout@v3
         run: |
               npm ci
               npm run lint
