--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -4,8 +4,12 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: get code
+        uses: actions/checkout@v3
       - name: lint execution
-        run: npx eslint
+        run: |
+              npm ci
+              npm run lint
   test:
     needs: lint
     runs-on: ubuntu-latest
@@ -17,6 +21,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: deployment execution
-        run: |
-              npm install -g serve
-              serve -s build
+        run: npm run build
